MOD-1056 Updated reImport functionality to parse and return options in correct format. Updated import results to check if connection id is available. Enabled validation check on updating an imported connection. Fixed an issue with checkbox not showing correct state (due to ng-model instead of ng-checked)

--- a/src/main/resources/css/database-connector.css
+++ b/src/main/resources/css/database-connector.css
@@ -142,7 +142,7 @@ form legend {
 }
 
 .editConnectionContainer {
-    min-width: 700px;
+    min-width: 600px;
 }
 
 .successStatusBar {
